magic/achievements: Add active field

--- a/wouso/resources/templates/cpanel/achievements_home.html
+++ b/wouso/resources/templates/cpanel/achievements_home.html
@@ -20,7 +20,8 @@
     <tr>
         <th>Identifier</th>
         <th>Title</th>
-        <th>Path</th>
+        <th>Image</th>
+        <th>Description</th>
         <th>Active</th>
     </tr>
     {% for a in achievements %}
@@ -28,6 +29,8 @@
             <td>{{ a.name }}</td>
             <td>{{ a.title }}</td>
             <td>{{ a.path }}</td>
+            <td>{{ a.description }}</td>
+            <td>{{ a.active }}</td>
         </tr>
     {% empty %}
         <tr><td colspan="0">No achievements added.</td></tr>
