--- a/wouso/resources/templates/splash.html
+++ b/wouso/resources/templates/splash.html
@@ -20,6 +20,9 @@
                 <button type="submit">Enter &raquo;</button>
                 {% csrf_token %}
             </form>
+		<p>
+		Pentru probleme în accesarea platformei deschide un tichet pe <a href="http://support.learningpark.ro">site-ul de suport</a>.
+		</p>
         </div>
 
         <div id="content">
