--- a/wouso/resources/templates/interface/header.html
+++ b/wouso/resources/templates/interface/header.html
@@ -15,7 +15,7 @@
 
         <a id="head-logout" href="{% url logout_view %}" onclick="remove_storage()">{% trans "Logout" %} &raquo;</a>
     {% else %}
-    {% trans 'Anonimous' %}, <a href="{% url login_view %}">{% trans "Login" %} &raquo;</a>
+    {% trans 'Anonymous' %}, <a href="{% url login_view %}">{% trans "Login" %} &raquo;</a>
     {% endif %}
     </div>
 </div>
