--- a/wouso/resources/static/css/forum-style.css
+++ b/wouso/resources/static/css/forum-style.css
@@ -17,7 +17,7 @@ div.player-info {
 }
 div.player-info-text {
     text-align: right;
-    display: inline-block;
+/*    display: inline-block; */
 }
 div#logo {
     height: 100px;
@@ -41,4 +41,19 @@ div.post {
     border: 1px solid #aaa;
     border-radius: 5px;
     padding: 5px;
+}
+
+.coin-amount {
+    display: inline-block;
+    padding-left: 20px;
+    line-height: 16px;
+}
+.coin-points {
+    background:url(../art/default/point.png) center left no-repeat;
+}
+.coin-gold {
+    background:url(../art/default/gold.png) center left no-repeat;
+}
+.coin-karma {
+    background:url(../art/default/karma.png) center left no-repeat;
 }
