--- a/wouso/resources/templates/interface/header.html
+++ b/wouso/resources/templates/interface/header.html
@@ -2,7 +2,13 @@
 {% load i18n %}
 {% load ui %}
 
-<div id="topbar">
+<!-- Logo -->
+<div id="logo" class="pull-left">
+    <a href="{% url homepage %}" id="logo" title="{{config_title}}"></a>
+</div>
+
+<!-- Buttons -->
+<div class="pull-right">
     <div class="first-line">
     {% if user.is_authenticated %}
         {% if user.real_user %}
@@ -18,24 +24,20 @@
     {% trans 'Anonymous' %}, <a href="{% url login_view %}">{% trans "Login" %} &raquo;</a>
     {% endif %}
     </div>
-</div>
-
-{% if user.is_authenticated %}
-<div class="second">
-    <a href="{% url player_profile player.id %}"><img src="{% player_avatar player %}" class="avatar avatar-med float-right" /></a>
-
-    <div class="header-player-info">
-        <strong>{% player player %}</strong>
-
-        <div class="second-info">
-        {% trans 'Level' %} {{ player.level_no }}
-        {% coin_amount player %}
-        {% coin_amount player 'gold' %}
+    <!-- Avatar -->
+    {% if user.is_authenticated %}
+    <div class="media player-info">
+        <a class="pull-right" href="{% url player_profile player.id %}">
+            <img src="{% player_avatar player %}" class="media-object avatar avatar-med" />
+        </a>
+        <div class="media-body" style="padding-top: 10px">
+            <h4 class="media-heading" style="text-align: right">{% player player %}</h4>
+            <div class="player-info-text">
+                {% trans 'Level' %} {{ player.level_no }}
+                {% coin_amount player %}
+                {% coin_amount player 'gold' %}
+            </div>
         </div>
     </div>
-</div>
-{% endif %}
-
-<div id="menu">
-    {% render_header %}
+    {% endif %}
 </div>
