forum: Proper title in forum pages

--- a/wouso/interface/forum/templates/forum/categories.html
+++ b/wouso/interface/forum/templates/forum/categories.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Forums" %} - {{block.super}}
+{% trans "Forums" %}
 {% endblock %}
 
 {% block breadcrumb %}
