--- a/wouso/interface/forum/templates/forum/post_create.html
+++ b/wouso/interface/forum/templates/forum/post_create.html
@@ -5,7 +5,7 @@
 {% load user %}
 
 {% block title %}
-{% trans "Forums" %} - {{ block.super }}
+{% trans "Forums" %} - {{ topic.forum.name }}
 {% endblock %}
 
 {% block breadcrumb %}
