--- a/wouso/interface/forum/templates/forum/topic.html
+++ b/wouso/interface/forum/templates/forum/topic.html
@@ -4,7 +4,7 @@
 {% load user %}
 
 {% block title %}
-{% trans "Forums" %} - {{ block.super }}
+{% trans "Forums" %} - {{ topic.forum.name }}
 {% endblock %}
 
 {% block breadcrumb %}
