--- a/wouso/interface/forum/templates/forum/forum.html
+++ b/wouso/interface/forum/templates/forum/forum.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 {% block title %}
-{% trans "Forums" %} - {{ block.super }}
+{% trans "Forums" %} - {{ forum.name }}
 {% endblock %}
 
 {% block breadcrumb %}
