--- a/wouso/interface/forum/templates/forum/topic_create.html
+++ b/wouso/interface/forum/templates/forum/topic_create.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% load bootstrap %}
 {% block title %}
-{% trans "Forums" %} - {{ block.super }}
+{% trans "Forums" %} - {{ forum.name }}
 {% endblock %}
 
 {% block breadcrumb %}
