[Customization] Compact html code

--- a/wouso/resources/templates/cpanel/customization/display.html
+++ b/wouso/resources/templates/cpanel/customization/display.html
@@ -9,27 +9,13 @@
 {% endblock %}
 
 {% block sectioncontent %}
+
 <ul class="nav nav-tabs">
-    <li>
-        <a href="{% url customization_home %}">
-            Customization
-        </a>
-    </li>
-    <li>
-        <a href="{% url customization_features %}">
-            Features
-        </a>
-    </li>
-    <li>
-        <a href="{% url customization_games %}">
-            Games
-        </a>
-    </li>
-    <li class="active">
-        <a href="{% url customization_display %}">
-            Display
-        </a>
-    </li>
+        <li><a href="{% url customization_home %}">Customization</a></li>
+        <li><a href="{% url customization_features %}">Features</a></li>
+        <li><a href="{% url customization_games %}">Games</a></li>
+        <li class="active"><a href="{% url customization_display %}">Display</a></li>
+        <li><a href="{% url customization_levels %}">Levels</a></li>
 </ul>
 
 <form method="post" action="">
