lesson: Display lesson video in 480p resolution by default

--- a/wouso/interface/apps/lesson/templates/lesson/lesson.html
+++ b/wouso/interface/apps/lesson/templates/lesson/lesson.html
@@ -29,7 +29,7 @@
     {{ lesson.content|safe }}
 
     {% if lesson.youtube_url %}
-    <iframe width="560" height="315" src="{{ embed_url }}" frameborder="0" allowfullscreen></iframe>
+    <iframe width="853" height="480" src="{{ embed_url }}?vq=large" frameborder="0" allowfullscreen></iframe>
     {% endif %}
 
     {% if through %}
